<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ========================================================= -->
    <!-- BUTTON -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/button_type">

        <DropDownPreference
            app:key="buttonKey"
            app:entries="@array/ButtonList"
            app:entryValues="@array/ButtonList"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- INTENT -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="intent">

        <!-- Whether the sdk creates the intent or the app hands it one it made itself -->
        <DropDownPreference
            app:key="intentSourceKey"
            app:title="Created by"
            app:entries="@array/IntentSource"
            app:entryValues="@array/IntentSource"
            app:defaultValue="the sdk creates it"
            app:useSimpleSummaryProvider="true" />

        <!-- Used when the app is the one creating the intent -->
        <EditTextPreference
            app:key="intentIdKey"
            app:title="Intent id"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="purposeKey"
            app:title="purpose"
            app:entries="@array/PurposeList"
            app:entryValues="@array/PurposeList"
            app:defaultValue="charge"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="statementDescriptorKey"
            app:title="statement descriptor"
            app:defaultValue="statement_descriptor"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="descriptionKey"
            app:title="description"
            app:defaultValue="sd"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="referenceKey"
            app:title="reference"
            app:defaultValue="uuid_test"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:key="customerInitiatedKey"
            app:title="customer initiated"
            android:defaultValue="true" />

        <CheckBoxPreference
            app:key="authenticateRequiredKey"
            app:title="authenticate required"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- SCOPE -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/scope_title">

        <DropDownPreference
            app:key="scopeKey"
            app:entries="@array/ScopeList"
            app:entryValues="@array/ScopeList"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- TRANSACTION -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/transaction">

        <EditTextPreference
            app:key="transactionRefrenceKey"
            app:defaultValue="trx"
            app:title="Trx ref"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- ORDER -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/order">

        <EditTextPreference
            app:key="orderIdKey"
            app:defaultValue=""
            app:title="@string/order_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="amountKey"
            app:defaultValue="2"
            app:title="@string/amount"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="orderCurrencyKey"
            app:entries="@array/OrderCurrencies"
            app:entryValues="@array/OrderCurrencies"
            app:defaultValue="KWD"
            app:title="@string/order_curr"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="orderRefrenceKey"
            app:defaultValue=""
            app:title="@string/trans_refrence"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- MERCHANT -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/merchantTitle">

        <EditTextPreference
            app:key="merchantId"
            app:defaultValue=""
            app:title="Tap Merchant ID"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- CUSTOMER -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/customerTitle">

        <EditTextPreference
            app:key="customerIdKey"
            app:defaultValue=""
            app:title="Customer id"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- OPERATION -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/operation">

        <EditTextPreference
            app:key="publicKey"
            app:defaultValue="pk_test_YhUjg9PNT8oDlKJ1aE2fMRz7"
            app:title="Public Key"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="hashStringKey"
            app:defaultValue=""
            app:title="HashString"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- CURRENCY - HIDDEN -->
    <!-- ========================================================= -->

    <PreferenceCategory
        android:title="@string/currency"
        app:isPreferenceVisible="false">

        <DropDownPreference
            app:key="selectedCurrencyKey"
            app:entries="@array/currencies"
            app:entryValues="@array/currencies"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- ACCEPTANCE -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/acceptance">

        <!-- Supported Regions -->

        <MultiSelectListPreference
            app:key="supportedRegionsKey"
            app:title="supportedRegions"
            android:entries="@array/SupportedRegions"
            android:entryValues="@array/SupportedRegions"
            app:useSimpleSummaryProvider="true" />


        <!-- Supported Currencies -->

        <MultiSelectListPreference
            app:key="supportedCurrenciesKey"
            app:title="supportedCurrencies"
            android:entries="@array/SupportedCurrencies"
            android:entryValues="@array/SupportedCurrencies"
            app:useSimpleSummaryProvider="true" />


        <!-- Supported Schemes -->

        <MultiSelectListPreference
            app:key="supportedSchemesKey"
            app:title="supportedSchemes"
            android:entries="@array/SupportedSchemes"
            android:entryValues="@array/SupportedSchemes"
            app:useSimpleSummaryProvider="true" />


        <!-- Supported Payment Authentications -->

        <MultiSelectListPreference
            app:key="supportedPaymentAuthenticationsKey"
            app:title="supportedPaymentAuthentications"
            android:entries="@array/SupportedPaymentAuthentication"
            android:entryValues="@array/SupportedPaymentAuthentication"
            app:useSimpleSummaryProvider="true" />


        <!-- Supported Payment Flows -->

        <MultiSelectListPreference
            app:key="supportedPaymentFlowsKey"
            app:title="supportedPaymentFlows"
            android:entries="@array/SupportedPaymentFlows"
            android:entryValues="@array/SupportedPaymentFlows"
            app:useSimpleSummaryProvider="true" />


        <!-- Supported Payment Types -->

        <MultiSelectListPreference
            app:key="supportedPaymentTypesKey"
            app:title="supportedPaymentTypes"
            android:entries="@array/SupportedPaymentTypes"
            android:entryValues="@array/SupportedPaymentTypes"
            app:useSimpleSummaryProvider="true" />


        <!-- Supported Payment Methods -->

        <MultiSelectListPreference
            app:key="supportedPaymentMethodKey"
            app:title="supportedPaymentMethod"
            android:entries="@array/SupportedPaymentMethods"
            android:entryValues="@array/SupportedPaymentMethods"

            app:useSimpleSummaryProvider="true" />


        <!-- Supported Fund Source -->

        <MultiSelectListPreference
            app:key="supportedFundSourceKey"
            app:title="supportedFundSource"
            android:entries="@array/SupportedFundSource"
            android:entryValues="@array/SupportedFundSource"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- FIELDS - HIDDEN -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/fields">

        <CheckBoxPreference
            app:key="fieldNameKey"
            app:title="name"
            android:defaultValue="true" />

        <CheckBoxPreference
            app:key="displayHoldernameKey"
            app:title="card holder"
            android:defaultValue="true" />

        <CheckBoxPreference
            app:key="contactEmailKey"
            app:title="contact email"
            android:defaultValue="true" />

        <CheckBoxPreference
            app:key="contactNumberKey"
            app:title="contact number"
            android:defaultValue="true" />

        <CheckBoxPreference
            app:key="shippingAddressKey"
            app:title="shipping address"
            android:defaultValue="true" />

        <!-- Not on the iOS screen, kept because the payload still carries it -->
        <CheckBoxPreference
            app:key="displayCVVKey"
            app:title="@string/card_cvv"
            android:defaultValue="true"
            app:isPreferenceVisible="false" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- RECEIPT & CHECKOUT -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="receipt &amp; checkout">

        <CheckBoxPreference
            app:key="receiptEmailKey"
            app:title="receipt email"
            android:defaultValue="false" />

        <CheckBoxPreference
            app:key="receiptSmsKey"
            app:title="receipt sms"
            android:defaultValue="false" />

        <CheckBoxPreference
            app:key="checkoutAutoKey"
            app:title="checkout auto"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- FEATURES -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/features">

        <!-- Acceptance Badge -->

        <CheckBoxPreference
            app:key="acceptanceBadgeKey"
            app:title="acceptance badge"
            android:defaultValue="true" />


        <!-- Order -->

        <CheckBoxPreference
            app:key="featureOrderKey"
            app:title="order"
            android:defaultValue="true" />


        <!-- Multiple Currencies -->

        <CheckBoxPreference
            app:key="multipleCurrenciesKey"
            app:title="multiple currencies"
            android:defaultValue="true" />


        <!-- Save Card -->

        <CheckBoxPreference
            app:key="displaySaveCardKey"
            app:title="@string/saveCard"
            android:defaultValue="true" />


        <!-- Auto Save Card -->

        <CheckBoxPreference
            app:key="displayAutosaveCardKey"
            app:title="@string/autoSaveCard"
            android:defaultValue="true" />


        <!-- Display Saved Cards -->

        <CheckBoxPreference
            app:key="displaySavedCardsKey"
            app:title="display saved cards"
            android:defaultValue="true" />


        <!-- Card Scanner -->

        <CheckBoxPreference
            app:key="cardScannerKey"
            app:title="card scanner"
            android:defaultValue="true" />


        <!-- Card NFC -->

        <CheckBoxPreference
            app:key="cardNfcKey"
            app:title="card nfc"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- INTERFACE -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/interface_">

        <DropDownPreference
            app:key="selectedlangKey"
            app:title="@string/choose_language"
            app:entries="@array/Lanugages"
            app:entryValues="@array/LanugagesValues"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="selectedthemeKey"
            app:title="@string/choose_theme"
            app:entries="@array/Theme"
            app:entryValues="@array/Theme"
            app:defaultValue="light"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="selectedcardedgeKey"
            app:title="Card Edges"
            app:entries="@array/Edges"
            app:entryValues="@array/Edges"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

        <!-- iOS has direction and card direction as two rows, and the payload has two
             fields. One row was driving both, so they could never differ -->
        <DropDownPreference
            app:key="selecteddirectionKey"
            app:title="Direction"
            app:entries="@array/Direction"
            app:entryValues="@array/Direction"
            app:defaultValue="dynamic"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="selectedcardirectKey"
            app:title="Card Direction"
            app:entries="@array/Direction"
            app:entryValues="@array/Direction"
            app:defaultValue="ltr"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="selectedcolorstyleKey"
            app:title="Color Style"
            app:entries="@array/colorStyle"
            app:entryValues="@array/colorStyle"
            app:defaultValue="colored"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:key="userExperienceKey"
            app:title="User Experience"
            app:entries="@array/UserExperience"
            app:entryValues="@array/UserExperience"
            app:defaultValue="popup"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:key="loaderKey"
            app:title="Loader"
            android:defaultValue="true" />

        <CheckBoxPreference
            app:key="poweredKey"
            app:title="Powered by Tap"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- POST - HIDDEN -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/post"
        app:isPreferenceVisible="false">

        <EditTextPreference
            app:key="posturlKey"
            app:defaultValue=""
            app:title="@string/post_url"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- REDIRECT - HIDDEN -->
    <!-- ========================================================= -->

    <PreferenceCategory
        app:title="@string/redirect"
        app:isPreferenceVisible="false">

        <EditTextPreference
            app:key="redirectUrlKey"
            app:defaultValue="onTapKnetRedirect://"
            app:title="@string/post_url"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ========================================================= -->
    <!-- DONE -->
    <!-- ========================================================= -->

    <Preference
        app:key="dialog_preference"
        android:title="Done"
        app:summary="Tap to show Button" />

</PreferenceScreen>